--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 padding-left: 40px">ব্যবসা প্রতিষ্ঠানের ঠিকানা
                         </td>
                         <td valign='top' style="font-weight:bold; font-size:16px; text-align:left;"> :
-                          আমিরাবাগ বাদাম পাঁচতলা
+                          আমিরাবাগ, বাদাম গাছতলা
                             &nbsp;০৬
                             ,&nbsp;কেরানীগঞ্জ -১৩১০
                             ,&nbsp;কেরাণীগঞ্জ
